static/css/style.css
html{
  font-size: 10px;
  font-family: 'Open Sans', sans-serif;
  background-color: #034480;
}

body{
  width: 75vw;
  margin: 0 auto;
  background-color: #a3c6e7;
  padding: 0 20px 20px 20px;
  border: 5px solid black;
}

h1{
  font-size: 35px;
  text-align: center;
  margin: 0;
  padding: 20px 0;
  color: #000000;
}

.intro{
  margin-top: -9px;
  font-size: 16px;
  line-height: 2;
  letter-spacing: 1px;
  text-align: center;
  font-weight: bolder;
}

.default{
  border: 7px solid #034480;
  display: block;
  margin: 0 auto;
  max-width: 90%;
  height: auto;
  margin-bottom: 1em;
}

.output{
  border: 7px solid #034480;
  display: block;
  margin: 0 auto;
  max-width: 90%;
  height: auto;
  margin-bottom: 1em;
}

.submit{
  display: block;
  position: relative;
  width: 200px;
  height: 50px;
  border-radius: 25px;
  background: linear-gradient(40deg, #ff6ec4, #7873f5);
  box-shadow: 0 4px 7px rgba(0, 0, 0, 0.4);
  display: flex;
  align-items: center;
  justify-content: center;
  color: #fff;
  font-size: 1.75em;
  font-weight: bold;
  cursor: pointer;
  transition: transform .2s ease-out;
  margin-top: 0.3em;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 11px;
}

.analyze:hover{
  border: 4px solid #f85d03;
}

.file {
  opacity: 0;
  width: 0.1px;
  height: 0.1px;
  position: absolute;
}

.file-input label{
  display: block;
  position: relative;
  width: 200px;
  height: 50px;
  border-radius: 25px;
  text-align: center;
  background: linear-gradient(40deg, #ff6ec4, #7873f5);
  box-shadow: 0 4px 7px rgba(0, 0, 0, 0.4);
  display: flex;
  align-items: center;
  justify-content: center;
  color: #fff;
  font-size: 1.5em;
  font-weight: bolder;
  cursor: pointer;
  transition: transform .2s ease-out;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 11px;
  margin-top: 9px;
}

label:hover, label:focus, .submit:focus, .submit:hover{
  transform: scale(1.1);
}

.file-name {
  position: absolute;
  bottom: -40px;
  left: 25px;
  font-size: 1.3rem;
  color: rgb(8, 8, 8);
}

.response-msg{
  margin-top: -9px;
  font-size: 16px;
  line-height: 2;
  letter-spacing: 1px;
  text-align: center;
  font-weight: bolder;
}

.samples{
  display: flex;
  flex-direction: row;
  margin-top: 0.5em;
  margin-bottom: 9px;
  align-items: space-between;
  justify-content: space-around;
  gap: 3em;
}

.samp{
  max-width: 16em;
  height: auto;
  border: 3px solid #034480;
}

.samp:hover{
  transform: scale(1.1);
  border: 3px solid #f85d03;
  cursor: pointer;
}

p{
  margin-top: 0.5em;
  margin-bottom: 5px;
  font-size: 16px;
  line-height: 2;
  letter-spacing: 1px;
  text-align: center;
  font-weight: bolder;
}

